--- a/index.html
+++ b/index.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
     <title>SKYMAK</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <img src="#" alt="logo.png">
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+      <img src="#" alt="logo.png" />
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <div id="container">
-            <div id="cons">
-                <h1>Consultoria</h1>
-                <p>Marketing Digital</p>
-            </div>
-            <div id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi eius, distinctio provident praesentium sit eos unde dignissimos numquam, saepe cumque nostrum obcaecati, rerum quas est fugit accusantium sint culpa dicta!</div>
-            <div id="pass">
-                <nav>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                </nav>
-            </div>
+      <div id="container">
+        <div id="cons">
+          <h1>Consultoria</h1>
+          <p>Marketing Digital</p>
         </div>
-        <div id="send">
-            <p>Deixe seu e-mail e aprenda a <span>revolucionar</span></p>
-            <input type="text">
-            <button type="submit">Enviar</button>
+        <div id="text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+          eius, distinctio provident praesentium sit eos unde dignissimos
+          numquam, saepe cumque nostrum obcaecati, rerum quas est fugit
+          accusantium sint culpa dicta!
         </div>
+        <div id="pass">
+          <nav>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <div id="send">
+        <p>Deixe seu e-mail e aprenda a <span>revolucionar</span></p>
+        <input type="text" />
+        <button type="submit">Enviar</button>
+      </div>
     </main>
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
