--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="total">
       <div id="container">
-        <div id="cons">
+        <div id="first">
           <h1>Consultoria</h1>
           <p>Marketing Digital</p>
         </div>
@@ -33,18 +33,22 @@
         </div>
         <div id="pass">
           <nav>
-            <ul>
-              <li></li>
-              <li></li>
-              <li></li>
+            <ul class="passlist">
+              <li>o</li>
+              <li>o</li>
+              <li>o</li>
             </ul>
           </nav>
         </div>
       </div>
       <div id="send">
-        <p>Deixe seu e-mail e aprenda a <span>revolucionar</span></p>
-        <input type="text" />
-        <button type="submit">Enviar</button>
+        <p>
+          Deixe seu e-mail e aprenda a <span class="color">revolucionar</span>
+        </p>
+        <form action="" class="form">
+          <input type="email" />
+          <button type="submit">Enviar</button>
+        </form>
       </div>
     </main>
     <footer></footer>
